fix: Address 6 SonarQube issues
Fixed issues:
- AZjr5wG89TChwHguyc6z for java:S1874 rule
- AZmEP12ibmPIH7Bq_J8m for java:S1874 rule
- AZmEP12ibmPIH7Bq_J8n for java:S1874 rule
- AZmEP12ibmPIH7Bq_J8o for java:S1874 rule
- AZjRjd_I592amupb0FQS for java:S135 rule
- AZjRjd5M592amupb0FPm for java:S3008 rule

Generated by SonarQube Agent (task: adc7064c-18ef-4014-a33b-57cf41daf851)